--- a/belizeweb/assets/css/main.css
+++ b/belizeweb/assets/css/main.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
 
 /*
+	Custom extensions to the HTML5 UP
+*/
+
+/*
 	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
